Bug 511185 - 5.3 nightly, Toolbar: some icons from the list of custom toolbar icons have disappeared
Summary: 5.3 nightly, Toolbar: some icons from the list of custom toolbar icons have d...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-26 23:14 UTC by Door1
Modified: 2025-12-23 12:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2025-10-26 23:14:43 UTC
SUMMARY

Sometime between October 22 (git 421ee45 / 421ee451 ) and October 25 (git c82f5ae / c82f5ae2 ), the available number of icons to choose from for custom toolbar icons has decreased.

Among the missing icons are the following:

arrow-downleft
arrow-downright
arrow-downleft
arrow-downright
geometry
media-floppy
mirror-view-16
mirrorAxis-HorizontalMove
mirrorAxis-VerticalMove
painter-order-fill-marker-stroke
painter-order-fill-stroke-marker
painter-order-marker-fill-stroke
painter-order-marker-stroke-fill
painter-order-stroke-fill-marker
painter-order-stroke-marker-fill
selection_add
selection_intersect
selection_replace
selection_subtract
sidebaricon
sort-by-hue
sort-by-value
stroke-cap-butt
stroke-cap-round
stroke-cap-square
stroke-join-bevel
stroke-join-miter
stroke-join-round
tag
transform-move
transform_icons_mirror_x



STEPS TO REPRODUCE

Go to Settings, Configure Toolbar, choose an action and tap "Change Icon"

OBSERVED RESULT
Some icons have disappeared since the Oct 22 nightly.

EXPECTED RESULT
Show all the icons from the Oct 22 nightly.


SOFTWARE/OS VERSIONS
Android 14
arm64
Krita 5.3 nightly
October 25, git c82f5ae / c82f5ae2
Comment 1 Halla Rempt 2025-11-05 10:54:43 UTC
Thank you for the report, I can confirm the issue. Now for the git bisect.
Comment 2 Halla Rempt 2025-11-05 11:40:44 UTC
The actions that go with these icons seem to be created when an image is created, not on startup.
Comment 3 Halla Rempt 2025-11-05 11:49:00 UTC
So, the icons come from tools or widgets that are created after an image is created. Only then is the icon cache populated from the action action creation. We have a mechanism where tools create actions on window creation in KoToolFactoryBase, but that isn't used. The list of missing icons show us which actions those are, so we should be able to precreate them somehow.
Comment 4 Halla Rempt 2025-12-17 09:56:21 UTC
Git commit ec500fecff9b72b604fc66ce9437733759fe9203 by Halla Rempt.
Committed on 17/12/2025 at 09:52.
Pushed by rempt into branch 'rempt/bug-511185'.

Show all icons even if no image has been opened

Some icons only get loaded when an image is created, and aren't available
beforehand. This loads all icons once to make sure they are loaded and
available.

M  +22   -0    libs/widgetutils/xmlgui/kedittoolbar.cpp

https://invent.kde.org/graphics/krita/-/commit/ec500fecff9b72b604fc66ce9437733759fe9203
Comment 5 Dmitry Kazakov 2025-12-23 12:39:58 UTC
Git commit cf88ed2a5e497f60886f0362faa660fb0b8d9fcb by Dmitry Kazakov, on behalf of Halla Rempt.
Committed on 23/12/2025 at 12:39.
Pushed by dkazakov into branch 'master'.

Show all icons even if no image has been opened

Some icons only get loaded when an image is created, and aren't available
beforehand. This loads all icons once to make sure they are loaded and
available.

M  +22   -0    libs/widgetutils/xmlgui/kedittoolbar.cpp

https://invent.kde.org/graphics/krita/-/commit/cf88ed2a5e497f60886f0362faa660fb0b8d9fcb