Show all icons even if no image has been opened

Some icons only get loaded when an image is created, and aren't available
beforehand. This loads all icons once to make sure they are loaded and
available.

BUG:511185